rewrite get price api
